--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 
                 // set parameters
                 let parameterDivisor = null;
-                let buttonLink = 'https://pay.chegow.com/ykwrla12';
+                let buttonLink = 'https://ev.braip.com/checkout/plaeoq8d/chel1n1q';
                 let qntParams = 0;
                 
                 if(buttonLink.includes('?'))
